--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 ############## DB properties #############
-spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce_db
-spring.datasource.username=dbuser
+#spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=dbuser
+spring.datasource.username=postgres
 spring.datasource.password=password
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
